// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select cell component renders correctly when checked 1`] = `
<ForwardRef(TableCell)
  component="div"
  padding="checkbox"
  size="small"
  variant="body"
>
  <ForwardRef(Checkbox)
    checked={true}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    className="tour-dataview-add-to-cart"
    disabled={false}
    icon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select row 2",
      }
    }
    onClick={[Function]}
    size="small"
  />
</ForwardRef(TableCell)>
`;

exports[`Select cell component renders correctly when unchecked 1`] = `
<ForwardRef(TableCell)
  component="div"
  padding="checkbox"
  size="small"
  variant="body"
>
  <ForwardRef(Checkbox)
    checked={false}
    checkedIcon={
      <Memo
        fontSize="small"
      />
    }
    className="tour-dataview-add-to-cart"
    disabled={false}
    icon={
      <Memo
        fontSize="small"
      />
    }
    inputProps={
      Object {
        "aria-label": "select row 2",
      }
    }
    onClick={[Function]}
    size="small"
  />
</ForwardRef(TableCell)>
`;
